--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,6 @@ body {
     margin: 12px auto;
     text-align: center;
     width: 300px;
-    /*border-radius: 150px 150px 3px 3px;*/
     border-radius: 5px;
 }
 
@@ -73,35 +72,15 @@ body {
     font-size: 24px;
     line-height: 42px;
     margin: 0 0 10px;
-    /*text-indent: 20px;*/
+    text-align: right;
 }
 
 .card p:last-child {
     margin: 0;
 }
 
-.card img {
-    border-radius: 5px;
-    /*pointer-events: none;*/
-    width: 100%;
-    -webkit-transition: border-color 0.3s;
-       -moz-transition: border-color 0.3s;
-        -ms-transition: border-color 0.3s;
-         -o-transition: border-color 0.3s;
-            transition: border-color 0.3s;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    -webkit-box-sizing: border-box;
-       -moz-box-sizing: border-box;
-            box-sizing: border-box;
-}
-
 .card a {
-    color: #ccc;
+    color: #fff;
     font-weight: bold;
     text-decoration: none;
     -webkit-transition: all 0.3s;
@@ -111,7 +90,7 @@ body {
             transition: all 0.3s;
 }
 .card a:hover {
-    color: #c02e1a;
+    color: #217fd6;
 }
 
 .card a.background-less:hover {
