--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,7 @@ body {
 
 .card a {
     color: #fff;
+    display: block;
     text-decoration: none;
     -webkit-transition: all 0.3s;
        -moz-transition: all 0.3s;
