--- a/css/main.css
+++ b/css/main.css
@@ -88,14 +88,21 @@ body {
     color: #fff;
     display: block;
     text-decoration: none;
-    -webkit-transition: all 0.3s;
-       -moz-transition: all 0.3s;
-        -ms-transition: all 0.3s;
-         -o-transition: all 0.3s;
-            transition: all 0.3s;
+
+    -webkit-transition: color 0.3s;
+       -moz-transition: color 0.3s;
+        -ms-transition: color 0.3s;
+         -o-transition: color 0.3s;
+            transition: color 0.3s;
 }
 .card a:hover {
-    color: #217fd6;
+    color: #cc3333;
+
+    -webkit-transition: color 0s;
+       -moz-transition: color 0s;
+        -ms-transition: color 0s;
+         -o-transition: color 0s;
+            transition: color 0s;
 }
 
 .card a.background-less:hover {
